--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,6 @@
 body {
   background-color: lightgrey;
-  /* background-image: url(/images/background.jpg); */
-  background-size: cover;
+  background-image: url(/images/lego-bg-blue.png);
+  background-size: auto;
+  background-repeat: repeat;
 }
